[gd_scene load_steps=39 format=3 uid="uid://157h3ftf0pbo"]

[ext_resource type="Script" uid="uid://cplueg4pmwhpg" path="res://Code/player/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://dq44a5ir83w4g" path="res://Assets/Snoblin/Assets/Prototype_Character/Prototype_Character_Blue.png" id="1_v0iea"]
[ext_resource type="Script" uid="uid://dmavi023kf6bs" path="res://Resources/_Scripts_/_Weapon_.gd" id="2_pu2lt"]
[ext_resource type="Texture2D" uid="uid://b71uildctb52s" path="res://Assets/Snoblin/Assets/Extra/Shadow.png" id="3_6t5aa"]
[ext_resource type="Resource" uid="uid://ddbs081nggh0k" path="res://Resources/Weapons/Fists.tres" id="3_ukyrk"]
[ext_resource type="Texture2D" uid="uid://ctxln85k2p4vt" path="res://Assets/Sprites/aim_smol.png" id="4_f1ek2"]
[ext_resource type="Shader" uid="uid://bdbgnuqakqw6n" path="res://Shaders/outline2.gdshader" id="4_ukyrk"]
[ext_resource type="Script" uid="uid://cotcxnvni071" path="res://Code/aimer.gd" id="5_fkybt"]
[ext_resource type="Resource" uid="uid://c3lidxjtnqshw" path="res://Resources/Weapons/default_gun.tres" id="5_tx1dd"]
[ext_resource type="Script" uid="uid://xctp8wkajc87" path="res://Code/States/StateMachine.gd" id="6_3smsa"]
[ext_resource type="Script" uid="uid://dlldqaltywfva" path="res://Code/debug_line.gd" id="6_f1ek2"]
[ext_resource type="Script" uid="uid://b1j48q08b8k42" path="res://Code/States/PlayerDefault.gd" id="7_8erm5"]
[ext_resource type="Script" uid="uid://3oy8gkpj2f5o" path="res://Code/States/PlayerAim.gd" id="8_8erm5"]
[ext_resource type="Script" uid="uid://dyc6mg0ar5dp5" path="res://Code/States/PlayerDialogue.gd" id="14_7dp3o"]
[ext_resource type="Script" uid="uid://bly2ia073lag6" path="res://Code/PlayerInventory.gd" id="15_h4iuc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ukyrk"]
radius = 12.0416

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkybt"]
radius = 2.0
height = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7dp3o"]
shader = ExtResource("4_ukyrk")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.3
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("1_v0iea")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_v0iea")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("1_v0iea")
region = Rect2(96, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vgqql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}],
"loop": false,
"name": &"Dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}],
"loop": true,
"name": &"Idle-front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"MoveDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}],
"loop": true,
"name": &"MoveHorizontal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}],
"loop": true,
"name": &"MoveUp",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6t5aa"]
radius = 3.0
height = 12.0

[sub_resource type="Curve" id="Curve_f1ek2"]
_limits = [10.0, 20.0, 0.0, 1.0]
_data = [Vector2(0, 10), 0.0, 0.0, 0, 0, Vector2(0.1, 13), 0.0, 0.0, 0, 0, Vector2(0.3, 15), 0.0, 0.0, 0, 0, Vector2(0.4, 17), 0.0, 0.0, 0, 0, Vector2(0.6, 18), 0.0, 0.0, 0, 0, Vector2(0.8, 19), 0.0, 0.0, 0, 0, Vector2(1, 20), 0.0, 0.0, 0, 0]
point_count = 7
metadata/_snap_enabled = true

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("stateMachine", "WeaponHolder") groups=["player"]]
z_index = 3
position = Vector2(-1, 0)
collision_layer = 8
collision_mask = 4099
motion_mode = 1
script = ExtResource("1_cvnsp")
stateMachine = NodePath("StateMachine")
weapons = Array[ExtResource("2_pu2lt")]([ExtResource("3_ukyrk"), ExtResource("3_ukyrk")])
WeaponHolder = NodePath("WeaponHolder")

[node name="Interaction" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 514

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_ukyrk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_fkybt")

[node name="CharacterAnimSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_7dp3o")
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_vgqql")
animation = &"Idle-front"

[node name="Shadow Under" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(0, -7)
texture = ExtResource("3_6t5aa")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -7)
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_6t5aa")

[node name="Aim" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Aimer" type="Sprite2D" parent="Aim" node_paths=PackedStringArray("shootPos", "Lline", "Rline", "raycast")]
texture_filter = 1
position = Vector2(0, -7)
script = ExtResource("5_fkybt")
shootPos = NodePath("../..")
Lline = NodePath("../LeftLine")
Rline = NodePath("../RightLine")
line_length = 90.0
raycast = NodePath("RayCast2D")
curve = SubResource("Curve_f1ek2")
max_aim_distance = 90.0
min_aim_distance = 20.0
min_spread = 30.0
max_spread = 120.0
current_weapon = ExtResource("5_tx1dd")

[node name="RayCast2D" type="RayCast2D" parent="Aim/Aimer"]
collision_mask = 35

[node name="DebugLine" type="Line2D" parent="Aim/Aimer/RayCast2D"]
width = 1.0
script = ExtResource("6_f1ek2")

[node name="smol" type="Sprite2D" parent="Aim/Aimer"]
visible = false
scale = Vector2(0.43, 0.43)
texture = ExtResource("4_f1ek2")

[node name="LeftLine" type="Line2D" parent="Aim"]
position = Vector2(0, -7)
points = PackedVector2Array(0, 0, 10, 10)
width = 1.0
default_color = Color(1, 1, 1, 0.266667)

[node name="RightLine" type="Line2D" parent="Aim"]
position = Vector2(0, -7)
points = PackedVector2Array(0, 0, 0, 0)
width = 1.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("6_3smsa")
initialState = NodePath("Default")

[node name="Default" type="Node" parent="StateMachine" node_paths=PackedStringArray("my_player")]
script = ExtResource("7_8erm5")
my_player = NodePath("../..")
metadata/_custom_type_script = "uid://b1j48q08b8k42"

[node name="Aim" type="Node" parent="StateMachine" node_paths=PackedStringArray("my_player", "aimSprite", "aimer", "weapon_holder")]
script = ExtResource("8_8erm5")
my_player = NodePath("../..")
aimSprite = NodePath("../../Aim/Aimer")
aimer = NodePath("../../Aim/Aimer")
weapon_holder = NodePath("../../WeaponHolder")
metadata/_custom_type_script = "uid://3oy8gkpj2f5o"

[node name="Dialogue" type="Node" parent="StateMachine" node_paths=PackedStringArray("my_player")]
script = ExtResource("14_7dp3o")
my_player = NodePath("../..")
metadata/_custom_type_script = "uid://dyc6mg0ar5dp5"

[node name="Inventory" type="Node" parent="StateMachine" node_paths=PackedStringArray("my_player")]
script = ExtResource("15_h4iuc")
my_player = NodePath("../..")
metadata/_custom_type_script = "uid://bduin25p5hfdx"

[node name="WeaponHolder" type="Node2D" parent="."]
position = Vector2(0, -7)
